--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
   "dependencies": {
     "gatsby": "^1.9.145",
     "gatsby-link": "^1.6.32",
-    "gatsby-plugin-react-helmet": "^1.0.8"
+    "gatsby-plugin-catch-links": "^1.0.14",
+    "gatsby-plugin-react-helmet": "^2.0.3",
+    "gatsby-source-filesystem": "^1.5.11",
+    "gatsby-source-medium": "^1.0.9",
+    "gatsby-transformer-remark": "^1.7.26",
+    "react-helmet": "^5.2.0",
+    "remove": "^0.1.5"
   },
   "keywords": [
     "gatsby"
