--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   "license": "MIT",
   "main": "n/a",
   "scripts": {
+    "build-and-deploy": "npm run build && npm run deploy",
     "build": "gatsby build",
     "develop": "gatsby develop",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
   "devDependencies": {
     "prettier": "^1.9.2"
