--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "gatsby-transformer-remark": "^1.7.26",
     "gh-pages": "^1.1.0",
     "react-helmet": "^5.2.0",
-    "remove": "^0.1.5"
+    "remove": "^0.1.5",
+    "styled-components": "^2.4.0"
   },
   "keywords": [
     "gatsby"
