--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "license": "MIT",
   "main": "n/a",
   "scripts": {
+    "bd": "npm run build-and-deploy",
     "build-and-deploy": "npm run build && npm run deploy",
     "build": "gatsby build",
     "develop": "gatsby develop",
