--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
   "scripts": {
     "bd": "npm run build-and-deploy",
     "build-and-deploy": "npm run build && npm run deploy",
-    "build": "gatsby build",
+    "build": "gatsby build --prefix-paths && mv public docs",
     "develop": "gatsby develop",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "gatsby build --prefix-paths && gh-pages -d public"
+    "deploy": "gh-pages -d public"
   },
   "devDependencies": {
     "prettier": "^1.9.2"
