--- a/package.json
+++ b/package.json
@@ -5,6 +5,12 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "classnames": "^2.2.5",
+    "dotenv": "^4.0.0",
+    "eslint": "^4.15.0",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.5.1",
     "gatsby": "^1.9.145",
     "gatsby-link": "^1.6.32",
     "gatsby-plugin-catch-links": "^1.0.14",
@@ -13,9 +19,14 @@
     "gatsby-source-filesystem": "^1.5.11",
     "gatsby-source-medium": "^1.0.9",
     "gatsby-transformer-remark": "^1.7.26",
+    "medium-sdk": "^0.0.4",
     "react-helmet": "^5.2.0",
+    "remark-frontmatter": "^1.2.0",
     "remove": "^0.1.5",
-    "styled-components": "^2.4.0"
+    "steem": "^0.6.7",
+    "styled-components": "^2.4.0",
+    "to-vfile": "^2.1.2",
+    "yargs": "^10.1.1"
   },
   "keywords": [
     "gatsby"
@@ -30,7 +41,11 @@
     "build-gatsby": "gatsby build --prefix-paths && mv public docs",
     "build": "npm run prebuild && npm run build-gatsby && npm run cname",
     "develop": "gatsby develop",
+    "lint": "npm run lint:eslint -- .",
+    "lint:eslint": "eslint --ignore-path .gitignore",
+    "lint:fix": "npm run lint -- --fix . ",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
+    "crosspost": "node scripts/publish/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
