Updated build scripts

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "cname": "touch docs/CNAME && echo 'thekevinscott.com' >> docs/CNAME",
     "build-gatsby": "gatsby build --prefix-paths && mv public docs",
     "build": "npm run prebuild && npm run build-gatsby && npm run cname",
+    "serve": "gatsby serve",
     "develop": "gatsby develop",
     "lint": "npm run lint:eslint -- .",
     "lint:eslint": "eslint --ignore-path .gitignore",
