--- a/package.json
+++ b/package.json
@@ -34,10 +34,9 @@
   "license": "MIT",
   "main": "n/a",
   "scripts": {
-    "prebuild": "rm -rf docs && rm -rf public",
     "cname": "touch docs/CNAME && echo 'thekevinscott.com' >> docs/CNAME",
     "build-gatsby": "gatsby build --prefix-paths && mv public docs",
-    "build": "npm run prebuild && npm run build-gatsby && npm run cname",
+    "build": "npm run build-gatsby && npm run cname",
     "serve": "gatsby serve",
     "develop": "gatsby develop",
     "lint": "npm run lint:eslint -- .",
