--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "gatsby-link": "^1.6.32",
     "gatsby-plugin-catch-links": "^1.0.14",
     "gatsby-plugin-react-helmet": "^2.0.3",
+    "gatsby-plugin-sass": "^1.0.15",
     "gatsby-remark-images": "^1.5.36",
     "gatsby-source-filesystem": "^1.5.11",
     "gatsby-source-medium": "^1.0.9",
@@ -25,6 +26,8 @@
     "remove": "^0.1.5",
     "steem": "^0.6.7",
     "styled-components": "^2.4.0",
+    "stylelint": "^8.4.0",
+    "stylelint-config-standard": "^18.0.0",
     "to-vfile": "^2.1.2",
     "yargs": "^10.1.1"
   },
@@ -34,13 +37,14 @@
   "license": "MIT",
   "main": "n/a",
   "scripts": {
-    "prebuild": "rm -rf docs",
+    "prebuild": "rm -rf docs && rm -rf public",
     "cname": "touch docs/CNAME && echo 'thekevinscott.com' >> docs/CNAME",
     "build-gatsby": "gatsby build --prefix-paths && mv public docs",
-    "build": "npm run prebuild && npm run build-gatsby && npm run cname",
+    "build": "NODE_ENV=production && npm run prebuild && npm run build-gatsby && npm run cname",
     "serve": "gatsby serve",
     "develop": "gatsby develop",
     "lint": "npm run lint:eslint -- .",
+    "lint:css": "stylelint './src/**/*.css",
     "lint:eslint": "eslint --ignore-path .gitignore",
     "lint:fix": "npm run lint -- --fix . ",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
