--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "scripts": {
     "prebuild": "rm -rf docs && rm -rf public",
     "cname": "touch docs/CNAME && echo 'thekevinscott.com' >> docs/CNAME",
-    "build-gatsby": "gatsby build --prefix-paths && mv public docs",
+    "build-gatsby": "gatsby build && mv public docs",
     "build": "NODE_ENV=production && npm run prebuild && npm run build-gatsby && npm run cname",
     "serve": "gatsby serve",
     "develop": "gatsby develop",
