--- a/package.json
+++ b/package.json
@@ -33,12 +33,12 @@
   },
   "main": "n/a",
   "scripts": {
-    "prebuild": "rm -rf docs && rm -rf public",
+    "prebuild": "rm -rf .cache/* && rm -rf docs && rm -rf public",
     "cname": "touch docs/CNAME && echo 'thekevinscott.com' >> docs/CNAME",
     "build-gatsby": "gatsby build && mv public docs",
     "build": "NODE_ENV=production && npm run prebuild && npm run build-gatsby && npm run cname",
     "serve": "gatsby serve",
-    "develop": "gatsby develop",
+    "develop": "rm -rf .cache/* && gatsby develop",
     "lint": "npm run lint:eslint -- .",
     "lint:css": "stylelint './src/**/*.css",
     "lint:eslint": "eslint --ignore-path .gitignore",
