--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby": "^1.9.145",
     "gatsby-link": "^1.6.32",
     "gatsby-plugin-catch-links": "^1.0.14",
+    "gatsby-plugin-google-fonts": "^0.0.3",
     "gatsby-plugin-react-helmet": "^2.0.3",
     "gatsby-plugin-sass": "^1.0.15",
     "gatsby-remark-images": "^1.5.36",
