More style changes

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
     "gatsby": "^1.9.145",
+    "gatsby-image": "^1.0.31",
     "gatsby-link": "^1.6.32",
     "gatsby-plugin-catch-links": "^1.0.14",
     "gatsby-plugin-google-fonts": "^0.0.3",
@@ -21,6 +22,7 @@
     "gatsby-source-filesystem": "^1.5.11",
     "gatsby-source-medium": "^1.0.9",
     "gatsby-transformer-remark": "^1.7.26",
+    "gatsby-transformer-sharp": "^1.6.16",
     "medium-sdk": "^0.0.4",
     "react-helmet": "^5.2.0",
     "remark-frontmatter": "^1.2.0",
