--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "gatsby-plugin-google-fonts": "^0.0.3",
     "gatsby-plugin-react-helmet": "^2.0.3",
     "gatsby-plugin-sass": "^1.0.15",
+    "gatsby-remark-autolink-headers": "^1.4.11",
+    "gatsby-remark-external-links": "^0.0.4",
     "gatsby-remark-images": "^1.5.36",
     "gatsby-source-filesystem": "^1.5.11",
     "gatsby-source-medium": "^1.0.9",
