--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-plugin-react-helmet": "^2.0.3",
     "gatsby-plugin-sass": "^1.0.15",
     "gatsby-remark-autolink-headers": "^1.4.11",
+    "gatsby-remark-copy-images": "^0.2.1",
     "gatsby-remark-external-links": "^0.0.4",
     "gatsby-remark-images": "^1.5.36",
     "gatsby-source-filesystem": "^1.5.11",
