--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.5.1",
-    "gatsby": "^1.9.145",
+    "gatsby": "^1.9.261",
     "gatsby-image": "^1.0.31",
     "gatsby-link": "^1.6.32",
     "gatsby-plugin-catch-links": "^1.0.14",
@@ -20,6 +20,7 @@
     "gatsby-plugin-google-analytics": "^1.0.15",
     "gatsby-plugin-google-fonts": "^0.0.3",
     "gatsby-plugin-react-helmet": "^2.0.3",
+    "gatsby-plugin-react-next": "^1.0.11",
     "gatsby-plugin-sass": "^1.0.15",
     "gatsby-remark-autolink-headers": "^1.4.11",
     "gatsby-remark-copy-images": "^0.2.1",
