--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "gatsby-remark-copy-linked-files": "^1.5.32",
     "gatsby-remark-external-links": "^0.0.4",
     "gatsby-remark-images": "^1.5.36",
+    "gatsby-remark-prismjs": "^2.0.2",
     "gatsby-source-filesystem": "^1.5.11",
     "gatsby-source-medium": "^1.0.9",
     "gatsby-transformer-remark": "^1.7.26",
     "gatsby-transformer-sharp": "^1.6.16",
     "medium-sdk": "^0.0.4",
+    "prismjs": "^1.14.0",
     "react-helmet": "^5.2.0",
     "remark-frontmatter": "^1.2.0",
     "remove": "^0.1.5",
