--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-react-next": "^1.0.11",
     "gatsby-plugin-sass": "^1.0.15",
     "gatsby-remark-autolink-headers": "^1.4.11",
+    "gatsby-remark-component": "^1.1.3",
     "gatsby-remark-copy-images": "^0.2.1",
     "gatsby-remark-copy-linked-files": "^1.5.32",
     "gatsby-remark-external-links": "^0.0.4",
@@ -30,11 +31,12 @@
     "gatsby-remark-prismjs": "^2.0.2",
     "gatsby-source-filesystem": "^1.5.11",
     "gatsby-source-medium": "^1.0.9",
-    "gatsby-transformer-remark": "^1.7.26",
+    "gatsby-transformer-remark": "^1.7.41",
     "gatsby-transformer-sharp": "^1.6.16",
     "medium-sdk": "^0.0.4",
     "prismjs": "^1.14.0",
     "react-helmet": "^5.2.0",
+    "rehype-react": "^3.0.2",
     "remark-frontmatter": "^1.2.0",
     "remove": "^0.1.5",
     "steem": "^0.6.7",
