--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "prebuild": "rm -rf .cache/* && rm -rf docs && rm -rf public",
     "cname": "touch docs/CNAME && echo 'thekevinscott.com' >> docs/CNAME",
     "build-gatsby": "gatsby build && mv public docs",
-    "build": "NODE_ENV=production && npm run prebuild && npm run build-gatsby && npm run cname",
+    "clean_build": "npm run prebuild && npm run build",
+    "build": "NODE_ENV=production && npm run build-gatsby && npm run cname",
     "serve": "gatsby serve",
     "develop": "gatsby develop",
     "deploy": "gh-pages -d docs",
