Set up a script to copy images to src directory

--- a/package.json
+++ b/package.json
@@ -49,12 +49,14 @@
   },
   "main": "n/a",
   "scripts": {
-    "prebuild": "rm -rf .cache/* && rm -rf docs && rm -rf public",
+    "prebuild": "rm -rf docs && rm -rf public",
+    "prebuild_with_cache_removal": "rm -rf .cache/* && rm -rf docs && rm -rf public",
     "cname": "touch docs/CNAME && echo 'thekevinscott.com' >> docs/CNAME",
     "build-gatsby": "gatsby build && mv public docs",
     "clean_build": "npm run prebuild && npm run build",
-    "build": "NODE_ENV=production && npm run build-gatsby && npm run cname",
+    "build": "NODE_ENV=production && npm run build-gatsby && npm run cname && npm run move_pages_to_docs",
     "serve": "gatsby serve",
+    "move_pages_to_docs": "mkdir -p docs/src && rsync -rv --exclude=*.js --exclude=*.md src/pages docs/src",
     "develop": "gatsby develop",
     "deploy": "gh-pages -d docs",
     "lint": "npm run lint:eslint -- .",
