Try adding mixpanel as a dep

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gatsby-transformer-remark": "^1.7.41",
     "gatsby-transformer-sharp": "^1.6.16",
     "medium-sdk": "^0.0.4",
+    "mixpanel-browser": "^2.22.4",
     "prismjs": "^1.14.0",
     "react-helmet": "^5.2.0",
     "rehype-react": "^3.0.2",
