--- a/package.json
+++ b/package.json
@@ -51,8 +51,7 @@
   },
   "main": "n/a",
   "scripts": {
-    "prebuild": "rm -rf docs && rm -rf public",
-    "prebuild_with_cache_removal": "rm -rf .cache/* && rm -rf docs && rm -rf public",
+    "prebuild": "rm -rf .cache/* && rm -rf docs && rm -rf public",
     "cname": "touch docs/CNAME && echo 'thekevinscott.com' >> docs/CNAME",
     "build-gatsby": "gatsby build && mv public docs",
     "build": "NODE_ENV=production && npm run prebuild && npm run build-gatsby && npm run cname",
