--- a/package.json
+++ b/package.json
@@ -51,25 +51,22 @@
   },
   "main": "n/a",
   "scripts": {
-    "prebuild": "rm -rf .cache/* && rm -rf docs && rm -rf public",
-    "cname": "touch docs/CNAME && echo 'thekevinscott.com' >> docs/CNAME",
-    "build-gatsby": "gatsby build && mv public docs",
-    "build": "NODE_ENV=production && npm run prebuild && npm run build-gatsby && npm run cname",
-    "simulate-production": "npm run build && mv docs public && npm run serve",
+    "prebuild": "rm -rf .cache/* && rm -rf public",
+    "build-gatsby": "gatsby build",
+    "build": "NODE_ENV=production && npm run prebuild && npm run build-gatsby",
+    "deploy": "npm run build && npm run test",
     "serve": "gatsby serve",
-    "move_pages_to_docs": "mkdir -p docs/src && rsync -rv --exclude=*.js --exclude=*.md src/pages docs/src",
     "develop": "gatsby develop",
-    "deploy": "gh-pages -d docs",
     "lint": "npm run lint:eslint -- .",
     "lint:css": "stylelint './src/**/*.css",
     "lint:eslint": "eslint --ignore-path .gitignore",
     "lint:fix": "npm run lint -- --fix . ",
-    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
     "crosspost": "node scripts/publish/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node scripts/test/index.js"
   },
   "devDependencies": {
     "gh-pages": "^1.1.0",
+    "jest": "^23.1.0",
     "prettier": "^1.9.2"
   }
 }
