--- a/package.json
+++ b/package.json
@@ -47,6 +47,13 @@
     "stylelint-config-standard": "^18.0.0",
     "to-vfile": "^2.1.2",
     "webfontloader": "^1.6.28",
+
+    "jest": "^23.1.0",
+    "jest-puppeteer": "^3.0.1",
+    "mkdirp": "^0.5.1",
+    "prettier": "^1.9.2",
+    "puppeteer": "^1.5.0",
+    "rimraf": "^2.6.2",
     "yargs": "^11.0.0"
   },
   "main": "n/a",
@@ -63,15 +70,6 @@
     "lint:fix": "npm run lint -- --fix . ",
     "crosspost": "node scripts/publish/index.js",
     "test": "node scripts/test/index.js --PORT 6041"
-  },
-  "devDependencies": {
-    "gh-pages": "^1.1.0",
-    "jest": "^23.1.0",
-    "jest-puppeteer": "^3.0.1",
-    "mkdirp": "^0.5.1",
-    "prettier": "^1.9.2",
-    "puppeteer": "^1.5.0",
-    "rimraf": "^2.6.2"
   },
   "jest": {
     "globalSetup": "<rootDir>scripts/test/setup.js",
