--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Kevin Scott",
   "dependencies": {
     "classnames": "^2.2.5",
+    "cross-env": "^5.1.6",
     "date-fns": "^1.29.0",
     "dotenv": "^4.0.0",
     "eslint": "^4.15.0",
@@ -33,27 +34,26 @@
     "gatsby-source-medium": "^1.0.9",
     "gatsby-transformer-remark": "^1.7.41",
     "gatsby-transformer-sharp": "^1.6.16",
+    "jest": "^23.1.0",
+    "jest-puppeteer": "^3.0.1",
     "medium-sdk": "^0.0.4",
     "mixpanel-browser": "^2.22.4",
+    "mkdirp": "^0.5.1",
+    "prettier": "^1.9.2",
     "prismjs": "^1.14.0",
+    "puppeteer": "^1.5.0",
     "react-gist": "^1.2.1",
     "react-helmet": "^5.2.0",
     "rehype-react": "^3.0.2",
     "remark-frontmatter": "^1.2.0",
     "remove": "^0.1.5",
+    "rimraf": "^2.6.2",
     "steem": "^0.6.7",
     "styled-components": "^1.2.1",
     "stylelint": "^8.4.0",
     "stylelint-config-standard": "^18.0.0",
     "to-vfile": "^2.1.2",
     "webfontloader": "^1.6.28",
-
-    "jest": "^23.1.0",
-    "jest-puppeteer": "^3.0.1",
-    "mkdirp": "^0.5.1",
-    "prettier": "^1.9.2",
-    "puppeteer": "^1.5.0",
-    "rimraf": "^2.6.2",
     "yargs": "^11.0.0"
   },
   "main": "n/a",
@@ -62,6 +62,7 @@
     "build-gatsby": "gatsby build",
     "build": "NODE_ENV=production && npm run prebuild && npm run build-gatsby",
     "deploy": "npm run build && npm run test",
+    "foo": "npm run test",
     "serve": "gatsby serve",
     "develop": "gatsby develop",
     "lint": "npm run lint:eslint -- .",
@@ -69,7 +70,7 @@
     "lint:eslint": "eslint --ignore-path .gitignore",
     "lint:fix": "npm run lint -- --fix . ",
     "crosspost": "node scripts/publish/index.js",
-    "test": "node scripts/test/index.js --PORT 6041"
+    "test": "cross-env PORT=6041  node scripts/test/index.js"
   },
   "jest": {
     "globalSetup": "<rootDir>scripts/test/setup.js",
