Lots of new tests and enforcing that meta tags appear correctly

--- a/package.json
+++ b/package.json
@@ -80,7 +80,8 @@
     "testEnvironment": "<rootDir>scripts/test/puppeteer_environment.js",
     "moduleNameMapper": {
       "scaffolding": "<rootDir>/scripts/test/scaffolding.js",
-      "lib": "<rootDir>/scripts/test/lib"
+      "lib": "<rootDir>/scripts/test/lib",
+      "gatsby-config": "<rootDir>/gatsby-config.js"
     },
     "transform": {
       "\\.md$": "jest-raw-loader"
