--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "1.0.0",
   "author": "Kevin Scott",
   "dependencies": {
+    "@types/node": "^10.3.1",
+    "@types/react": "16.3.16",
+    "@types/react-dom": "16.0.6",
     "classnames": "^2.2.5",
     "cross-env": "^5.1.6",
     "date-fns": "^1.29.0",
@@ -22,6 +25,7 @@
     "gatsby-plugin-react-helmet": "^2.0.3",
     "gatsby-plugin-react-next": "^1.0.11",
     "gatsby-plugin-sass": "^1.0.15",
+    "gatsby-plugin-typescript": "^1.4.20",
     "gatsby-remark-autolink-headers": "^1.4.11",
     "gatsby-remark-component": "^1.1.3",
     "gatsby-remark-copy-images": "^0.2.1",
@@ -53,11 +57,17 @@
     "stylelint": "^8.4.0",
     "stylelint-config-standard": "^18.0.0",
     "to-vfile": "^2.1.2",
+    "tslint": "^5.10.0",
+    "tslint-config-prettier": "^1.13.0",
+    "tslint-react": "^3.6.0",
+    "typescript": "^2.9.1",
     "webfontloader": "^1.6.28",
     "yargs": "^11.0.0"
   },
   "main": "n/a",
   "scripts": {
+    "type-check": "tsc --noEmit",
+    "lint": "tslint --project .",
     "prebuild": "npm run clean",
     "build-gatsby": "gatsby build",
     "build": "NODE_ENV=production && npm run prebuild && npm run build-gatsby",
