--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/react": "16.3.16",
     "@types/react-dom": "16.0.6",
     "classnames": "^2.2.5",
+    "color": "^3.0.0",
     "cross-env": "^5.1.6",
     "date-fns": "^1.29.0",
     "dotenv": "^4.0.0",
@@ -67,7 +68,7 @@
   "main": "n/a",
   "scripts": {
     "type-check": "tsc --noEmit",
-    "lint": "tslint --project .",
+    "lint": "npm run lint:eslint -- .",
     "prebuild": "npm run clean",
     "build-gatsby": "gatsby build",
     "build": "NODE_ENV=production && npm run prebuild && npm run build-gatsby",
@@ -75,7 +76,6 @@
     "deploy": "npm run build && npm run test",
     "serve": "gatsby serve",
     "develop": "gatsby develop",
-    "lint": "npm run lint:eslint -- .",
     "lint:css": "stylelint './src/**/*.css",
     "lint:eslint": "eslint --ignore-path .gitignore",
     "lint:fix": "npm run lint -- --fix . ",
