--- a/package.json
+++ b/package.json
@@ -69,8 +69,7 @@
   "scripts": {
     "type-check": "tsc --noEmit",
     "lint": "npm run lint:eslint -- .",
-    "prebuild_old": "npm run clean",
-    "prebuild": "",
+    "prebuild": "npm run clean",
     "build-gatsby": "gatsby build",
     "build": "NODE_ENV=production && npm run prebuild && npm run build-gatsby",
     "clean": "rm -rf .cache/* && rm -rf public",
