--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-catch-links": "^1.0.14",
     "gatsby-plugin-feed": "^1.3.16",
     "gatsby-plugin-google-analytics": "^1.0.15",
+    "gatsby-plugin-module-local-ident-name": "^0.0.6",
     "gatsby-plugin-purify-css": "^2.2.1",
     "gatsby-plugin-react-helmet": "^2.0.3",
     "gatsby-plugin-react-next": "^1.0.11",
@@ -70,9 +71,10 @@
   "scripts": {
     "type-check": "tsc --noEmit",
     "lint": "npm run lint:eslint -- .",
-    "prebuild": "npm run clean",
+    "prebuild": "ls",
+    "prebuild_old": "npm run clean",
     "build-gatsby": "gatsby build",
-    "build": "NODE_ENV=production && npm run prebuild && npm run build-gatsby",
+    "build": "NODE_ENV=production && npm run build-gatsby",
     "clean": "rm -rf .cache/* && rm -rf public",
     "deploy": "npm run build && npm run test",
     "serve": "gatsby serve",
