Add the two react native articles

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,11 @@
 {
-  "include": ["./src/**/*"],
+  "include": [
+    "./src/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    "**/__tests__/index.js"
+  ],
   "compilerOptions": {
     "target": "esnext",
     "module": "commonjs",
