--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "tslint": "^5.10.0",
     "tslint-config-prettier": "^1.13.0",
     "tslint-react": "^3.6.0",
-    "typescript": "^2.9.1",
+    "typescript": "3.0.1",
     "webfontloader": "^1.6.28",
     "yargs": "^11.0.0"
   },
