Force exit for jest

--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "gatsby-source-medium": "^1.0.9",
     "gatsby-transformer-remark": "^1.7.41",
     "gatsby-transformer-sharp": "^1.6.16",
-    "jest": "^23.1.0",
     "jest-puppeteer": "^3.0.1",
     "jest-raw-loader": "^1.0.1",
     "medium-sdk": "^0.0.4",
@@ -54,6 +53,7 @@
     "rehype-react": "^3.0.2",
     "remark-frontmatter": "^1.2.0",
     "remove": "^0.1.5",
+    "jest": "^23.4.2",
     "rimraf": "^2.6.2",
     "steem": "^0.6.7",
     "stylelint": "^8.4.0",
@@ -83,7 +83,7 @@
     "crosspost": "node scripts/publish/index.js",
     "new": "node scripts/new_post/index.js",
     "test-clean": "npm run clean && npm run build && npm run test",
-    "test": "npm run test-clean && cross-env PORT=6041 node scripts/test/index.js"
+    "test": "cross-env PORT=6041 node scripts/test/index.js"
   },
   "jest": {
     "globalSetup": "<rootDir>scripts/test/setup.js",
