--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
   "jest": {
     "globalSetup": "<rootDir>scripts/test/setup.js",
     "globalTeardown": "<rootDir>scripts/test/teardown.js",
+    "setupTestFrameworkScriptFile": "<rootDir>scripts/test/test-setup.js",
     "testEnvironment": "<rootDir>scripts/test/puppeteer_environment.js",
     "moduleNameMapper": {
       "scaffolding": "<rootDir>/scripts/test/scaffolding.js",
