--- a/package.json
+++ b/package.json
@@ -64,6 +64,9 @@
     "tslint-config-prettier": "^1.13.0",
     "tslint-react": "^3.6.0",
     "typescript": "3.0.1",
+    "@types/jest": "^23.3.1",
+    "babel-jest": "^23.4.2",
+    "ts-jest": "^23.1.3",
     "webfontloader": "^1.6.28",
     "yargs": "^11.0.0"
   },
@@ -88,8 +91,5 @@
     "test": "cross-env PORT=6041 node scripts/test/index.js"
   },
   "devDependencies": {
-    "@types/jest": "^23.3.1",
-    "babel-jest": "^23.4.2",
-    "ts-jest": "^23.1.3"
   }
 }
