Add copy-static script

--- a/package.json
+++ b/package.json
@@ -76,7 +76,8 @@
     "lint": "npm run lint:eslint -- .",
     "prebuild": "npm run clean",
     "build-gatsby": "gatsby build",
-    "build": "NODE_ENV=production && npm run build-gatsby",
+    "build": "NODE_ENV=production && npm run build-gatsby && npm run copy-static",
+    "copy-static": "cp src public/src",
     "clean": "rm -rf .cache/* && rm -rf public",
     "deploy": "npm run build && npm run test",
     "serve": "gatsby serve",
