Update script name

--- a/package.json
+++ b/package.json
@@ -76,8 +76,8 @@
     "lint": "npm run lint:eslint -- .",
     "prebuild": "npm run clean",
     "build-gatsby": "gatsby build",
-    "build": "NODE_ENV=production && npm run build-gatsby && npm run copy-static",
-    "copy-images": "rsync -zarv --prune-empty-dirs --include '*/' --include='*.jpeg' --include='*.png' --include='*.gifv' --include='*.gif' --include='*.jpg' --exclude '*'  src/pages public",
+    "build": "NODE_ENV=production && npm run build-gatsby && npm run copy-images",
+    "copy-images": "rsync -zarv --prune-empty-dirs --include '*/' --include='*.jpeg' --include='*.png' --include='*.gifv' --include='*.gif' --include='*.jpg' --exclude '*'  src/pages public/src",
     "clean": "rm -rf .cache/* && rm -rf public",
     "deploy": "npm run build && npm run test",
     "serve": "gatsby serve",
