--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "version": "1.0.0",
   "author": "Kevin Scott",
   "dependencies": {
+    "@types/jest": "^23.3.1",
     "@types/node": "^10.3.1",
     "@types/react": "16.3.16",
     "@types/react-dom": "16.0.6",
+    "babel-jest": "^23.4.2",
     "classnames": "^2.2.5",
     "color": "^3.0.0",
     "cross-env": "^5.1.6",
@@ -26,9 +28,8 @@
     "gatsby-plugin-module-local-ident-name": "^0.0.6",
     "gatsby-plugin-purify-css": "^2.2.1",
     "gatsby-plugin-react-helmet": "^2.0.3",
-    "gatsby-plugin-react-next": "^1.0.11",
-    "gatsby-plugin-sass": "^1.0.15",
-    "gatsby-plugin-typescript": "^1.4.20",
+    "gatsby-plugin-sass": "^2.0.11",
+    "gatsby-plugin-typescript": "^2.0.12",
     "gatsby-remark-autolink-headers": "^1.4.11",
     "gatsby-remark-component": "^1.1.3",
     "gatsby-remark-copy-images": "^0.2.1",
@@ -60,13 +61,11 @@
     "stylelint": "^8.4.0",
     "stylelint-config-standard": "^18.0.0",
     "to-vfile": "^2.1.2",
+    "ts-jest": "^23.1.3",
     "tslint": "^5.10.0",
     "tslint-config-prettier": "^1.13.0",
     "tslint-react": "^3.6.0",
     "typescript": "3.0.1",
-    "@types/jest": "^23.3.1",
-    "babel-jest": "^23.4.2",
-    "ts-jest": "^23.1.3",
     "webfontloader": "^1.6.28",
     "yargs": "^11.0.0"
   },
@@ -91,6 +90,5 @@
     "test:local": "yarn test --watch --no-server --port 8000 --bail",
     "test": "cross-env PORT=6041 node scripts/test/index.js"
   },
-  "devDependencies": {
-  }
+  "devDependencies": {}
 }
